// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfferList component renders correctly when offers are being fetched 1`] = `
<div
  className="OfferListComponent-root-1"
>
  <div
    className="OfferListComponent-offerListHeader-3"
  >
    <h4>
      <span>
        Latest offers
      </span>
    </h4>
    <div
      className="MuiLinearProgress-root-5 MuiLinearProgress-primaryColor-6 MuiLinearProgress-rootQuery-16"
    >
      <div
        className="MuiLinearProgress-bar-12 MuiLinearProgress-primaryColorBar-7 MuiLinearProgress-indeterminateBar1-17"
        style={Object {}}
      />
      <div
        className="MuiLinearProgress-bar-12 MuiLinearProgress-primaryColorBar-7 MuiLinearProgress-indeterminateBar2-18"
        style={Object {}}
      />
    </div>
  </div>
  <div
    className="OfferListComponent-offerListContent-2"
  />
</div>
`;

exports[`OfferList component renders correctly when offers are not being fetched 1`] = `
<div
  className="OfferListComponent-root-1"
>
  <div
    className="OfferListComponent-offerListHeader-3"
  >
    <h4>
      <span>
        Latest offers
      </span>
    </h4>
  </div>
  <div
    className="OfferListComponent-offerListContent-2"
  />
</div>
`;
